# fastapi-example

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 22e10a87b1cb_init_db.py
app/: config.py  database.py  main.py  schema.py
app/routers/: notes.py
